Add size of networks

--- a/analysis_mobilenet.ipynb
+++ b/analysis_mobilenet.ipynb
@@ -680,6 +680,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tamanho da rede: 1_528_106"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
