--- a/analysis_hochuli.ipynb
+++ b/analysis_hochuli.ipynb
@@ -680,6 +680,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tamanho da rede: 122_570"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
