Add test analysis

--- a/analysis_hochuli.ipynb
+++ b/analysis_hochuli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "[255 rows x 8 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[255 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "[255 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,26 +637,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_26162/561248041.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5100/561248041.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_count_train[\"relu_proportion\"] = df_count_train[\"zero_relu_call\"] / df_count_train[\"total_relu_call\"]\n",
-      "/tmp/ipykernel_26162/561248041.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5100/561248041.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_original_train[\"relu_proportion\"] = df_original_train[\"zero_relu_call\"] / df_original_train[\"total_relu_call\"]\n",
-      "/tmp/ipykernel_26162/561248041.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5100/561248041.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "<Axes: xlabel='epoch', ylabel='relu_proportion'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "<Axes: xlabel='epoch', ylabel='train_loss'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "Text(0.5, 1.0, 'Tempo por Epoca')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "Text(0.5, 1.0, 'Loss (Treino) por Epoca')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "Text(0.5, 1.0, 'Loss (Validacao) por Epoca')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "Text(0.5, 1.0, 'Acurácia (Validacao) por Epoca')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
        "45                 0.0              NaN  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "38                 0.0              NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1190,6 +1190,333 @@
     "print(f\"Tempo de treino até melhor época (não diff): {time_original//60:02}:{time_original%60:02}\")\n",
     "print(f\"Tempo de treino até melhor época (diff): {time_diff//60:02}:{time_diff%60:02}\")\n",
     "print(f\"Diferença: {round(100*(time_diff - time_original) / time_original, 2)}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avaliação nos dados de teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>execution</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_acc</th>\n",
+       "      <th>time</th>\n",
+       "      <th>zero_relu_call</th>\n",
+       "      <th>total_relu_call</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.327494</td>\n",
+       "      <td>0.8942</td>\n",
+       "      <td>1.688432</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.304388</td>\n",
+       "      <td>0.9028</td>\n",
+       "      <td>1.672024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.318384</td>\n",
+       "      <td>0.8980</td>\n",
+       "      <td>1.696448</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.317944</td>\n",
+       "      <td>0.9000</td>\n",
+       "      <td>1.647664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.303115</td>\n",
+       "      <td>0.9018</td>\n",
+       "      <td>1.654488</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     execution  epoch  train_loss  val_loss  val_acc      time   \n",
+       "50           1     -1         NaN  0.327494   0.8942  1.688432  \\\n",
+       "101          2     -1         NaN  0.304388   0.9028  1.672024   \n",
+       "152          3     -1         NaN  0.318384   0.8980  1.696448   \n",
+       "203          4     -1         NaN  0.317944   0.9000  1.647664   \n",
+       "254          5     -1         NaN  0.303115   0.9018  1.654488   \n",
+       "\n",
+       "     zero_relu_call  total_relu_call  \n",
+       "50                0                0  \n",
+       "101               0                0  \n",
+       "152               0                0  \n",
+       "203               0                0  \n",
+       "254               0                0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_diff_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>execution</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_acc</th>\n",
+       "      <th>time</th>\n",
+       "      <th>zero_relu_call</th>\n",
+       "      <th>total_relu_call</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.308947</td>\n",
+       "      <td>0.8996</td>\n",
+       "      <td>1.653778</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.287362</td>\n",
+       "      <td>0.9025</td>\n",
+       "      <td>1.638057</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.309644</td>\n",
+       "      <td>0.8936</td>\n",
+       "      <td>1.646816</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.299353</td>\n",
+       "      <td>0.9006</td>\n",
+       "      <td>1.646894</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.9010</td>\n",
+       "      <td>1.646456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     execution  epoch  train_loss  val_loss  val_acc      time   \n",
+       "50           1     -1         NaN  0.308947   0.8996  1.653778  \\\n",
+       "101          2     -1         NaN  0.287362   0.9025  1.638057   \n",
+       "152          3     -1         NaN  0.309644   0.8936  1.646816   \n",
+       "203          4     -1         NaN  0.299353   0.9006  1.646894   \n",
+       "254          5     -1         NaN  0.295455   0.9010  1.646456   \n",
+       "\n",
+       "     zero_relu_call  total_relu_call  \n",
+       "50                0                0  \n",
+       "101               0                0  \n",
+       "152               0                0  \n",
+       "203               0                0  \n",
+       "254               0                0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Diferenciáveis: 1.6718111515045166 seg\n",
+      "Tempo Não-diferenciáveis: 1.6464003086090089 seg\n",
+      "Diferenciáveis são 1.54% mais lentas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prediction time\n",
+    "diff_time = df_diff_test[\"time\"].mean()\n",
+    "original_time = df_original_test[\"time\"].mean()\n",
+    "diff = (diff_time - original_time) / original_time\n",
+    "print(f\"Tempo Diferenciáveis: {diff_time} seg\")\n",
+    "print(f\"Tempo Não-diferenciáveis: {original_time} seg\")\n",
+    "print(f\"Diferenciáveis são {round(100*diff, 2)}% mais lentas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss Diferenciáveis: 0.3142647051811218\n",
+      "Loss Não-diferenciáveis: 0.30015240579843516\n",
+      "Diferenciáveis são 4.7% piores\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loss\n",
+    "diff_loss = df_diff_test[\"val_loss\"].mean()\n",
+    "original_loss = df_original_test[\"val_loss\"].mean()\n",
+    "diff = (diff_loss - original_loss) / original_loss\n",
+    "print(f\"Loss Diferenciáveis: {diff_loss}\")\n",
+    "print(f\"Loss Não-diferenciáveis: {original_loss}\")\n",
+    "print(f\"Diferenciáveis são {round(100*diff, 2)}% piores\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia Diferenciáveis: 0.89936 seg\n",
+      "Acurácia Não-diferenciáveis: 0.8994599999999998 seg\n",
+      "Acurácia das diferenciáveis é 0.01% menor\n"
+     ]
+    }
+   ],
+   "source": [
+    "# acc\n",
+    "diff_acc = df_diff_test[\"val_acc\"].mean()\n",
+    "original_acc = df_original_test[\"val_acc\"].mean()\n",
+    "diff = (diff_acc - original_acc) / original_acc\n",
+    "print(f\"Acurácia Diferenciáveis: {diff_acc} seg\")\n",
+    "print(f\"Acurácia Não-diferenciáveis: {original_acc} seg\")\n",
+    "if diff < 0:\n",
+    "    print(f\"Acurácia das diferenciáveis é {-round(100*diff, 2)}% menor\")\n",
+    "else:\n",
+    "    print(f\"Acurácia das diferenciáveis é {round(100*diff, 2)}% maior\")"
    ]
   },
   {
