--- a/analysis_mobilenet.ipynb
+++ b/analysis_mobilenet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "[155 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[155 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "[155 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,26 +637,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3148/561248041.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5620/561248041.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_count_train[\"relu_proportion\"] = df_count_train[\"zero_relu_call\"] / df_count_train[\"total_relu_call\"]\n",
-      "/tmp/ipykernel_3148/561248041.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5620/561248041.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_original_train[\"relu_proportion\"] = df_original_train[\"zero_relu_call\"] / df_original_train[\"total_relu_call\"]\n",
-      "/tmp/ipykernel_3148/561248041.py:4: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5620/561248041.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "<Axes: xlabel='epoch', ylabel='relu_proportion'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "<Axes: xlabel='epoch', ylabel='train_loss'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "<Axes: xlabel='epoch', ylabel='train_loss'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "<Axes: xlabel='epoch', ylabel='val_loss'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "<Axes: xlabel='epoch', ylabel='value'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
        "30                 0.0              NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
        "Text(0.5, 1.0, 'Tempo por Epoca')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
        "Text(0.5, 1.0, 'Loss (Treino) por Epoca')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "Text(0.5, 1.0, 'Loss (Validacao) por Epoca')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "Text(0.5, 1.0, 'Acurácia (Validacao) por Epoca')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
        "11                 0.0              NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
        "10                 0.0              NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1767,6 +1767,333 @@
     "print(f\"Tempo de treino até melhor época (não diff): {time_original//60:02}:{time_original%60:02}\")\n",
     "print(f\"Tempo de treino até melhor época (diff): {time_diff//60:02}:{time_diff%60:02}\")\n",
     "print(f\"Diferença: {round(100*(time_diff - time_original) / time_original, 2)}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avaliação nos dados de teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>execution</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_acc</th>\n",
+       "      <th>time</th>\n",
+       "      <th>zero_relu_call</th>\n",
+       "      <th>total_relu_call</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.393001</td>\n",
+       "      <td>0.8827</td>\n",
+       "      <td>1.717603</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.392426</td>\n",
+       "      <td>0.8789</td>\n",
+       "      <td>1.793947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.385369</td>\n",
+       "      <td>0.8834</td>\n",
+       "      <td>1.679392</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.412302</td>\n",
+       "      <td>0.8743</td>\n",
+       "      <td>1.688439</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.399579</td>\n",
+       "      <td>0.8791</td>\n",
+       "      <td>1.912156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     execution  epoch  train_loss  val_loss  val_acc      time   \n",
+       "30           1     -1         NaN  0.393001   0.8827  1.717603  \\\n",
+       "61           2     -1         NaN  0.392426   0.8789  1.793947   \n",
+       "92           3     -1         NaN  0.385369   0.8834  1.679392   \n",
+       "123          4     -1         NaN  0.412302   0.8743  1.688439   \n",
+       "154          5     -1         NaN  0.399579   0.8791  1.912156   \n",
+       "\n",
+       "     zero_relu_call  total_relu_call  \n",
+       "30                0                0  \n",
+       "61                0                0  \n",
+       "92                0                0  \n",
+       "123               0                0  \n",
+       "154               0                0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_diff_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>execution</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_acc</th>\n",
+       "      <th>time</th>\n",
+       "      <th>zero_relu_call</th>\n",
+       "      <th>total_relu_call</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.394500</td>\n",
+       "      <td>0.8833</td>\n",
+       "      <td>1.691160</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.380583</td>\n",
+       "      <td>0.8767</td>\n",
+       "      <td>1.790956</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.378189</td>\n",
+       "      <td>0.8836</td>\n",
+       "      <td>1.766958</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.386754</td>\n",
+       "      <td>0.8782</td>\n",
+       "      <td>1.709059</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.378191</td>\n",
+       "      <td>0.8808</td>\n",
+       "      <td>1.652396</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     execution  epoch  train_loss  val_loss  val_acc      time   \n",
+       "30           1     -1         NaN  0.394500   0.8833  1.691160  \\\n",
+       "61           2     -1         NaN  0.380583   0.8767  1.790956   \n",
+       "92           3     -1         NaN  0.378189   0.8836  1.766958   \n",
+       "123          4     -1         NaN  0.386754   0.8782  1.709059   \n",
+       "154          5     -1         NaN  0.378191   0.8808  1.652396   \n",
+       "\n",
+       "     zero_relu_call  total_relu_call  \n",
+       "30                0                0  \n",
+       "61                0                0  \n",
+       "92                0                0  \n",
+       "123               0                0  \n",
+       "154               0                0  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo Diferenciáveis: 1.758307409286499 seg\n",
+      "Tempo Não-diferenciáveis: 1.7221058845520019 seg\n",
+      "Diferenciáveis são 2.1% mais lentas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prediction time\n",
+    "diff_time = df_diff_test[\"time\"].mean()\n",
+    "original_time = df_original_test[\"time\"].mean()\n",
+    "diff = (diff_time - original_time) / original_time\n",
+    "print(f\"Tempo Diferenciáveis: {diff_time} seg\")\n",
+    "print(f\"Tempo Não-diferenciáveis: {original_time} seg\")\n",
+    "print(f\"Diferenciáveis são {round(100*diff, 2)}% mais lentas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss Diferenciáveis: 0.3965354508161545\n",
+      "Loss Não-diferenciáveis: 0.3836432915925979\n",
+      "Diferenciáveis são 3.36% piores\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loss\n",
+    "diff_loss = df_diff_test[\"val_loss\"].mean()\n",
+    "original_loss = df_original_test[\"val_loss\"].mean()\n",
+    "diff = (diff_loss - original_loss) / original_loss\n",
+    "print(f\"Loss Diferenciáveis: {diff_loss}\")\n",
+    "print(f\"Loss Não-diferenciáveis: {original_loss}\")\n",
+    "print(f\"Diferenciáveis são {round(100*diff, 2)}% piores\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia Diferenciáveis: 0.8796799999999999 seg\n",
+      "Acurácia Não-diferenciáveis: 0.8805200000000001 seg\n",
+      "Acurácia das diferenciáveis é 0.1% menor\n"
+     ]
+    }
+   ],
+   "source": [
+    "# acc\n",
+    "diff_acc = df_diff_test[\"val_acc\"].mean()\n",
+    "original_acc = df_original_test[\"val_acc\"].mean()\n",
+    "diff = (diff_acc - original_acc) / original_acc\n",
+    "print(f\"Acurácia Diferenciáveis: {diff_acc} seg\")\n",
+    "print(f\"Acurácia Não-diferenciáveis: {original_acc} seg\")\n",
+    "if diff < 0:\n",
+    "    print(f\"Acurácia das diferenciáveis é {-round(100*diff, 2)}% menor\")\n",
+    "else:\n",
+    "    print(f\"Acurácia das diferenciáveis é {round(100*diff, 2)}% maior\")"
    ]
   },
   {
